Fixing editors warning things.

--- a/science.nasa.gov/index-no-webgl.html
+++ b/science.nasa.gov/index-no-webgl.html
@@ -139,7 +139,7 @@
       </div> <!-- /not-supported -->
 
       <div id="satellite_form">
-        <form id="controls">
+        <form id="controls" action="">
           <fieldset>
             <dl id="controls_satellite">
               <dt>
@@ -218,13 +218,13 @@
                 title="Pause updating satellite information"
                 type="button">Pause</button>
       </div>
-      <div id="map-canvas"></div>
+      <div id="map-canvas" style="height:512px;width:100%;"></div>
       <div><h2>Satellite Information</h2></div>
 
       <div id="statistics">
 
             <div id="date">Date</div>
-            <table id="positions" style="width:100%">
+            <table id="positions" style="width:100%" summary="Satellite Coordinates">
               <thead>
                 <tr>
                   <th>Name</th>
