--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -12,11 +12,11 @@
   <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
   <!-- Jasmin Reporter -->
-  <!-- <script src="vendor/jasmine-jsreporter.js" type="text/javascript"></script> -->
+  <script src="vendor/jasmine-jsreporter.js" type="text/javascript"></script>
   <script type="text/javascript">
     // You can verify this works in the console by calling
-    // jasmine.getJSReport()
-    // jasmine.getEnv().addReporter(new jasmine.JSReporter2())
+    //  jasmine.getJSReport()
+    jasmine.getEnv().addReporter(new jasmine.JSReporter2())
   </script>
   <!-- include source files here... -->
   <script type="text/javascript" src="../sgp4/lib/pasta.js"></script>
