Add newtonnu.js and spec

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -29,6 +29,7 @@
   <script type="text/javascript" src="../sgp4/tests/mutilsSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/magSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/anglSpec.js"></script>
+  <script type="text/javascript" src="../sgp4/tests/newtonnuSpec.js"></script>
   <!-- <script type="text/javascript" src="..."></script> -->
 
 </head>
