Add the constants spec to the test runner.

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -26,6 +26,7 @@
   <!-- <script type="text/javascript" src=".."></script> -->
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="../sgp4/tests/constantsSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/mutilsSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/magSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/anglSpec.js"></script>
