--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -27,6 +27,8 @@
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="../sgp4/tests/constantsSpec.js"></script>
+  <script type="text/javascript" src="../sgp4/tests/getgravcSpec.js"></script>
+
   <script type="text/javascript" src="../sgp4/tests/days2mdhSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/jdaySpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/mutilsSpec.js"></script>
