--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -35,6 +35,7 @@
   <script type="text/javascript" src="../sgp4/tests/magSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/anglSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/newtonnuSpec.js"></script>
+  <script type="text/javascript" src="../sgp4/tests/dpperSpec.js"></script>
   <!-- <script type="text/javascript" src="..."></script> -->
 
 </head>
