Add dscom and unit tests.
Other minor edits.

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -36,6 +36,7 @@
   <script type="text/javascript" src="../sgp4/tests/anglSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/newtonnuSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/dpperSpec.js"></script>
+  <script type="text/javascript" src="../sgp4/tests/dscomSpec.js"></script>
   <!-- <script type="text/javascript" src="..."></script> -->
 
 </head>
