--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -18,7 +18,7 @@
   <script type="text/javascript">
     // You can verify this works in the console by calling
     //  jasmine.getJSReport()
-    jasmine.getEnv().addReporter(new jasmine.JSReporter2())
+    jasmine.getEnv().addReporter(new jasmine.JSReporter2());
   </script>
   <!-- include source files here... -->
   <!-- We don't need to do this since require.js loads these now. These will in fact raise errors because the same name will be loaded twice.-->
@@ -28,7 +28,7 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="../sgp4/tests/constantsSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/getgravcSpec.js"></script>
-
+ <script type="text/javascript" src="../sgp4/tests/dsinitSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/days2mdhSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/jdaySpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/mutilsSpec.js"></script>
