Add gstime, tests, and docs.
Refs #162

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -38,6 +38,7 @@
   <script type="text/javascript" src="../sgp4/tests/dpperSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/dscomSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/dspaceSpec.js"></script>
+ <script type="text/javascript" src="../sgp4/tests/gstimeSpec.js"></script>
   <!-- <script type="text/javascript" src="..."></script> -->
 
 </head>
