Add invjday, tests, and docs.
Refs #162

This commit also refactors days2mdh so it sends back an object usable by
 invjday. I just made days2mdh return the year, too. I don't really see much
the difference between these two functions. One just seems to call the
other and return its results...

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -28,7 +28,7 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="../sgp4/tests/constantsSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/getgravcSpec.js"></script>
- <script type="text/javascript" src="../sgp4/tests/dsinitSpec.js"></script>
+  <script type="text/javascript" src="../sgp4/tests/dsinitSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/days2mdhSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/jdaySpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/mutilsSpec.js"></script>
@@ -38,7 +38,8 @@
   <script type="text/javascript" src="../sgp4/tests/dpperSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/dscomSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/dspaceSpec.js"></script>
- <script type="text/javascript" src="../sgp4/tests/gstimeSpec.js"></script>
+  <script type="text/javascript" src="../sgp4/tests/gstimeSpec.js"></script>
+  <script type="text/javascript" src="../sgp4/tests/invjdaySpec.js"></script>
   <!-- <script type="text/javascript" src="..."></script> -->
 
 </head>
