Add initl.js, tests, & docs.
Refs #162

This refactors some return values and makes some assumptions about some
settings. It assumes "i" is desired if unset. I hope we can just get rid
of "a" mode.

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -40,6 +40,7 @@
   <script type="text/javascript" src="../sgp4/tests/dspaceSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/gstimeSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/invjdaySpec.js"></script>
+  <script type="text/javascript" src="../sgp4/tests/initlSpec.js"></script>
   <!-- <script type="text/javascript" src="..."></script> -->
 
 </head>
