Commit ported sgp4js and tests.
Still needs doc strings updated. Refs #162

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -41,7 +41,9 @@
   <script type="text/javascript" src="../sgp4/tests/gstimeSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/invjdaySpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/initlSpec.js"></script>
+  <script type="text/javascript" src="../sgp4/tests/sgp4Spec.js"></script>
   <!-- <script type="text/javascript" src="..."></script> -->
+
 
 </head>
 
