--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -42,6 +42,8 @@
   <script type="text/javascript" src="../sgp4/tests/invjdaySpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/initlSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/sgp4Spec.js"></script>
+  <script type="text/javascript" src="../sgp4/tests/rv2coeSpec.js"></script>
+
   <!-- <script type="text/javascript" src="..."></script> -->
 
 
