Initial commit getting twoline2rv.js ported. Refs #162
This required reworking some of sgp4init though sgp4init doesn't have
tests converted yet.

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -43,7 +43,8 @@
   <script type="text/javascript" src="../sgp4/tests/initlSpec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/sgp4Spec.js"></script>
   <script type="text/javascript" src="../sgp4/tests/rv2coeSpec.js"></script>
-
+  <script type="text/javascript" src="../sgp4/tests/twoline2rvSpec.js"></script>
+  <script type="text/javascript" src="../sgp4/tests/sgp4InitSpec.js"></script>
   <!-- <script type="text/javascript" src="..."></script> -->
 
 
